--- a/week6/idata2306/ex03.4-crudrest/pom.xml
+++ b/week6/idata2306/ex03.4-crudrest/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>no.ntnu</groupId>
-	<artifactId>crudrest</artifactId>
+	<artifactId>crudrest-jdbc</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>crudrest</name>
-	<description>Exercise 2.3 - Create REST API with CRUD operations</description>
+	<name>JDBC connection + CRUD REST</name>
+	<description>Connect to DB with JDBC - live coding</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -27,6 +27,17 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.0.2</version>
+		</dependency>
+		<dependency>
+				<groupId>org.postgresql</groupId>
+				<artifactId>postgresql</artifactId>
+				<version>42.2.14</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
